feat: add logger
